Completing D4.1 Faze
